# ibis-tutorial

./: .gitignore  main.py  pyproject.toml
src/1_ibis_demo/: 1_ibis_demo.ipynb
src/2_ibis_kedro_demo/kedro-ibis-demo/: README.md  pyproject.toml
src/2_ibis_kedro_demo/kedro-ibis-demo/conf/base/: catalog.yml
src/2_ibis_kedro_demo/kedro-ibis-demo/src/kedro_ibis_demo/: __init__.py  __main__.py  settings.py
